--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -3,6 +3,20 @@
 
 
 body {
-//    background: blue;
-  }
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+}
   
+main {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 70vh; 
+  align-items: center;
+  justify-content: center; 
+
+}
