--- a/src/widgets/header/UI/nav/styles.module.scss
+++ b/src/widgets/header/UI/nav/styles.module.scss
@@ -1,4 +1,4 @@
-.nav {
+.wrapper {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -19,13 +19,108 @@
         color: blue; /* Цвет текста на текущей странице */
       }
     }
+
+
+
   }
   
 
-.role-switcher {
-  cursor: pointer;
+
+  .active {
+    color: blue;
+  }
+
+  .no__active {
+    color: grey;
+  }
+
+
+
+  // .switcher {
+  //   cursor: pointer;
+  //   position: relative;
+  //   width: 50px;
+  //   height: 30px;
+  //   background-color: #f0f0f0;
+  //   border-radius: 15px;
+  //   display: flex;
+  //   align-items: center;
+  //   padding: 5px;
+  // }
+  
+  // .inner__circle {
+  //   width: 20px;
+  //   height: 20px;
+  //   border-radius: 50%;
+  //   background-color: #0074cc;
+  //   position: absolute;
+  //   transition: transform 0.3s ease-in-out;
+  // }
+  
+  // .role__blogger .inner__circle {
+  //   transform: translateX(0);
+  // }
+  
+  // .role__advertiser .inner__circle {
+  //   transform: translateX(100%);
+  // }
+
+
+
+
+
+
+  .switch input
+{
+  display: none;
 }
 
-.active {
-  color: blue;
+.switch 
+{
+  display: inline-block;
+  width: 60px; /*=w*/
+  height: 30px; /*=h*/
+  margin: 4px;
+  transform: translateY(50%);
+  position: relative;
 }
+
+.slider
+{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-radius: 30px;
+  box-shadow: 0 0 0 2px #777, 0 0 4px #777;
+  cursor: pointer;
+  border: 4px solid transparent;
+  overflow: hidden;
+  transition: 0.2s;
+}
+
+.slider:before
+{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #777;
+  border-radius: 30px;
+  transform: translateX(-30px); /*translateX(-(w-h))*/
+  transition: 0.2s;
+}
+
+input:checked + .slider:before
+{
+  transform: translateX(30px); /*translateX(w-h)*/
+  background-color: limeGreen;
+}
+
+input:checked + .slider
+{
+  box-shadow: 0 0 0 2px limeGreen, 0 0 8px limeGreen;
+}
+
+
