--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -1,22 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import "reset.scss";
 @import "variables.scss";
 
 
 body {
-  margin: 0;
-  padding: 0;
   display: flex;
-  flex-direction: column;
-  min-height: 100vh; 
+  justify-content: space-around;
 }
-  
-main {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 70vh; 
-  align-items: center;
-  justify-content: center; 
 
+.container {
+  max-width: var(--container-width);
+  padding: 0 40px;
 }
+
+
