--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -1,3 +1,8 @@
-:root{
-    
+:root {
+    --container-width: 1270px;
+    --container-padding: 15px;
+    --first-text: #000;
+    --secondary-text: #606060;
+    --Gradient-1: #4772E6;
+    --Gradient-2: #FF2F66;
 }
