fix: mega fixes in junior project

--- a/src/pages/Main/UI/styles.module.scss
+++ b/src/pages/Main/UI/styles.module.scss
@@ -72,7 +72,7 @@
 }
 
 .partners__block{
-  background-image: url('./../../../../../public/images/assets/bb.svg') ;
+  background-image: url('images/assets/bb.svg') ;
   width: 100%;
 }
 
