--- a/src/pages/Main/UI/styles.module.scss
+++ b/src/pages/Main/UI/styles.module.scss
@@ -79,10 +79,47 @@
 .how__wrapper{
   max-width: var(--container-width);
   height: 749px;
-  flex-shrink: 0;
   background: #4772E6;
   border-radius: 50px;
   margin-bottom: 100px;
+  position: relative;
+  z-index: -1;
+
+
+  &::before{
+    content: '';
+    background-image: url('images/assets/RoadBlock.png') ;
+    background-size: contain; 
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 170px;
+    left: 50px;
+    width: 100%;
+    height: 70%;
+    z-index: 10;
+  }
+}
+
+.how__title{
+  color: #FFF;
+  font-size: 44px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding-top: 50px;
+  margin-bottom: 323px;
+
+
+}
+
+
+.registr_btn{
+  background: var(--Gradient-2, radial-gradient(419.34% 136.52% at 0% 100%, rgba(255, 255, 255, 0.20) 0%, rgba(125, 117, 117, 0.00) 100%), linear-gradient(90deg, #FF2F66 0%, rgba(254, 110, 48, 0.99) 100%));
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding: 12px 43px;
 }
 
 
@@ -90,6 +127,7 @@
   align-items: center;
   text-align: center;
   margin-bottom: 100px;
+
 }
 
 .why__title{
@@ -101,7 +139,6 @@
   margin-bottom: 50px;
 }
 
-
 .cta__wrapper {
   background-image: url('./../../../../public/images/assets/background2.png');
   background-size: cover;
@@ -109,6 +146,7 @@
   border-radius: 50px 50px 50px 50px; 
   padding: 40px; 
   max-width: var(--container-width);
+  margin-bottom: 150px;
 }
 
 .cta__column{
@@ -157,4 +195,17 @@
   line-height: normal;
   margin-bottom: 50px;
   max-width: 812px;
+}
+
+.customers__wrapper{
+  margin-bottom: 200px;
+}
+
+.customer__title{
+  color: var(--first-text);
+  font-size: 44px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-bottom: 50px;
 }
