feat: add autoclose of dropdown components, add burger icon

--- a/src/pages/Main/UI/styles.module.scss
+++ b/src/pages/Main/UI/styles.module.scss
@@ -140,7 +140,7 @@
 }
 
 .cta__wrapper {
-  background-image: url('./../../../../public/images/assets/background2.png');
+  background-image: url('images/assets/background2.png');
   background-size: cover;
   background-position: center;
   border-radius: 50px 50px 50px 50px; 
