--- a/src/widgets/header/UI/profile/styles.module.scss
+++ b/src/widgets/header/UI/profile/styles.module.scss
@@ -5,5 +5,34 @@
     width: 40px;
     height: 40px;
   }
+  position: relative;
+}
 
+.menu {
+  display: block;
+  padding: 30px;
+  position: absolute;
+  top: 100%;
+  right: 10%;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  width: 300px;
+  border-radius: 20px;
+
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  li {
+    padding: 8px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #f0f0f0;
+    }
+  }
 }
