--- a/src/widgets/header/UI/styles.module.scss
+++ b/src/widgets/header/UI/styles.module.scss
@@ -1,6 +1,8 @@
 .wrapper {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-auto-flow: column;
+    column-gap: 10px;
     align-items: center;
-    padding: 20px 0;
+    padding: 20px;
+    position: relative;
 }
