feat: move blocks to widgets, add new feats (to Do Btns ), remove useless featLists, add Swiper in partherList & customerList

--- a/src/pages/Main/UI/styles.module.scss
+++ b/src/pages/Main/UI/styles.module.scss
@@ -5,7 +5,8 @@
 }
 
 .top__row{
-  display: flex;
+  display: grid;
+  grid-auto-flow: column;
   column-gap: 5px;
   justify-content: space-between;
 
@@ -155,7 +156,8 @@
 
 
 .cta__row{
-  display: flex;
+  display: grid;
+  grid-auto-flow: column;
   column-gap: 20px;
   align-items: center;
   margin-bottom: 20px;
