--- a/src/shared/ui/MyModal/styles.module.scss
+++ b/src/shared/ui/MyModal/styles.module.scss
@@ -16,7 +16,8 @@
 }
 
 .myModal.active{
-    display: flex;
+    display: grid;
+    grid-auto-flow: column;
     justify-content: center;
     align-items: center;
 }
