feat: add Main Page Blogger

--- a/src/entities/accommCard/UI/styles.module.scss
+++ b/src/entities/accommCard/UI/styles.module.scss
@@ -2,7 +2,7 @@
     background: linear-gradient(90deg, rgba(71, 114, 230, 0.1) 0.03%, rgba(142, 84, 233, 0.1) 100.36%);
     border-radius: 40px 40px 0px 40px;
     padding: 30px 40px 30px 30px;
-    width: 510px;
+    max-width: 510px;
 
     &.vencom {
         color: #FFF;
