--- a/src/entities/customerCard/UI/styles.module.scss
+++ b/src/entities/customerCard/UI/styles.module.scss
@@ -1,5 +1,5 @@
 .customer{
-    width: 400px;
+    max-width: 400px;
     border-radius: 12px 12px 0px 12px;
     background: linear-gradient(90deg, rgba(71, 113, 230, 0.1) 0.03%, rgba(142, 84, 233, 0.1) 100.36%);
     padding: 20px;
