--- a/src/widgets/header/UI/styles.module.scss
+++ b/src/widgets/header/UI/styles.module.scss
@@ -3,6 +3,7 @@
     grid-auto-flow: column;
     column-gap: 10px;
     align-items: center;
-    padding: 20px;
+    // padding: 20px;
     position: relative;
+    border-bottom: 0.5px solid rgba(0, 0, 0, 0.30);
 }
