--- a/src/widgets/whyChooseUs/UI/styles.module.scss
+++ b/src/widgets/whyChooseUs/UI/styles.module.scss
@@ -14,3 +14,6 @@
     margin-bottom: 50px;
   }
   
+.button{
+    background: radial-gradient(419.34% 136.52% at 0% 100%, rgba(255, 255, 255, 0.20) 0%, rgba(125, 117, 117, 0.00) 100%), linear-gradient(90deg, #FF2F66 0%, rgba(254, 110, 48, 0.99) 100%);
+}
