--- a/src/shared/ui/sliderSubs/styles.module.scss
+++ b/src/shared/ui/sliderSubs/styles.module.scss
@@ -30,7 +30,7 @@
 }
 
 .value {
-    color: #000;
+    color: var(--first-text);
     font-size: 20px;
     font-style: normal;
     font-weight: 600;
