--- a/src/entities/priceCard/UI/styles.module.scss
+++ b/src/entities/priceCard/UI/styles.module.scss
@@ -6,6 +6,31 @@
     text-align: center;
     align-items: center;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    ul{
+        color: rgba(0, 0, 0, 0.70);
+        text-align: left;
+        
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+
+
+        li{
+            display: grid;
+            grid-auto-flow: column;
+            justify-content: start;
+            column-gap: 10px;
+            margin-bottom: 20px;
+        
+            svg{
+                width: 15px;
+                height: 15px;
+            }
+        }
+        
+    }
 }
 
 .standard{
@@ -54,25 +79,6 @@
 }
 
 
-.options{
-    color: rgba(0, 0, 0, 0.70);
-    text-align: left;
-    
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-}
 
 
-.option__row{
-    display: grid;
-    grid-auto-flow: column;
-    column-gap: 10px;
-    margin-bottom: 20px;
 
-    img{
-        width: 15px;
-        height: 15px;
-    }
-}
