--- a/src/features/workWithUs/UI/styles.module.scss
+++ b/src/features/workWithUs/UI/styles.module.scss
@@ -3,8 +3,7 @@
 }
 
 .work__title{
-    color: #000;
-
+    color: var(--first-text);
     font-size: 36px;
     font-style: normal;
     font-weight: 600;
