--- a/src/widgets/calculateIncome/UI/styles.module.scss
+++ b/src/widgets/calculateIncome/UI/styles.module.scss
@@ -2,14 +2,14 @@
     background-image: url('images/assets/background2.png');
     background-size: cover;
     background-position: center;
-    border-radius: 50px 50px 50px 50px; 
+    border-radius: 50px; 
     padding: 40px 0; 
-    max-width: var(--container-width);
     margin-bottom: 150px;
-  }
 
-  .calculate__column{
-
+    svg{
+      width: 40px;
+      height: 40px;
+    }
 
   }
 
@@ -18,14 +18,11 @@
   max-width: 870px;
   display: grid;
   grid-auto-flow: column;
+  justify-content: start;
   column-gap: 20px;
   align-items: center;
   margin-bottom: 20px;
 
-  img{
-    width: 40px;
-    height: 40px;
-  }
 }
 
 
