--- a/src/widgets/turnkey/UI/styles.module.scss
+++ b/src/widgets/turnkey/UI/styles.module.scss
@@ -1,11 +1,17 @@
 .turnkey__wrapper {
-    background-image: url('images/assets/background2.png');
-    background-size: cover;
-    background-position: center;
-    border-radius: 50px 50px 50px 50px; 
-    padding: 40px; 
-    max-width: var(--container-width);
-    margin-bottom: 150px;
+  background-image: url('images/assets/background2.png');
+  background-size: cover;
+  background-position: center;
+  border-radius: 50px; 
+  padding: 40px 0; 
+  margin-bottom: 150px;
+
+  svg{
+    width: 40px;
+    height: 40px;
+  }
+
+    // max-width: var(--container-width);
   }
   
   .turnkey__column{
@@ -19,11 +25,8 @@
     column-gap: 20px;
     align-items: center;
     margin-bottom: 20px;
-  
-    img{
-      width: 40px;
-      height: 40px;
-    }
+    justify-content: start;
+
   }
   
   .turnkey__title{
