--- a/src/features/myProjectAdvCard/UI/styles.module.scss
+++ b/src/features/myProjectAdvCard/UI/styles.module.scss
@@ -184,8 +184,8 @@
     align-items: center;
     row-gap: 10px;
     margin-top: 20px;
-    padding: 10px;
-    border-radius: 12px;
-    border: 1px solid var(--Gradient-1, #4772E6);
+    padding: 10px 10px 0 10px;
+    border-radius: 12px 12px 0 0;
+    border-top: 1px solid var(--Gradient-1, #4772E6);
     background: var(--Personal-colors-White, #FFF);
 }
