fix: assets paths and svg icons colors

--- a/src/widgets/partners/UI/styles.module.scss
+++ b/src/widgets/partners/UI/styles.module.scss
@@ -15,7 +15,7 @@
 }
 
 .partners__block{
-    background-image: url('images/assets/bb.svg') ;
+    background-image: url('/images/assets/bb.svg') ;
     background-repeat: no-repeat; 
     background-size: cover; 
     z-index: -1;
