--- a/src/widgets/howItWorks/UI/styles.module.scss
+++ b/src/widgets/howItWorks/UI/styles.module.scss
@@ -8,7 +8,7 @@
   
     &::before{
       content: '';
-      background-image: url('images/assets/RoadBlock.png') ;
+      background-image: url('/images/assets/RoadBlock.png') ;
       background-size: contain; 
       background-repeat: no-repeat;
       position: absolute;
