--- a/src/entities/myProjectAdvSubcard/UI/styles.module.scss
+++ b/src/entities/myProjectAdvSubcard/UI/styles.module.scss
@@ -3,6 +3,7 @@
 .subcard__row{
     display: grid;
     grid-auto-flow: column;
+    // grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
     column-gap: 5px;
     align-items: center;
 }
@@ -10,9 +11,11 @@
 .subcard__left{
     display: grid;
     grid-auto-flow: column;
+    // grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
     border-radius: 15px;
     border: 1px solid #D9D9D9;
     padding: 10px 0;
+    white-space: nowrap;
 }
 
 .channel__preview{
@@ -20,6 +23,7 @@
     grid-auto-flow: row;
     row-gap: 10px;
     border-right:  1px solid #D9D9D9;
+    padding: 0 40px;
 
     p{
         color: var(--first-text);
@@ -156,17 +160,90 @@
 
 }
 
-.subcard__right{
+.subcard__status{
     border-radius: 15px;
     border: 1px solid #D9D9D9;
     height: 100%;
+    display: grid;
+    align-items: center;
+    padding: 0 50px;
+
+    div{
+        display: grid;
+        grid-auto-flow: row;
+        row-gap: 10px;
+        align-items: center;
+        text-align: center;
+        justify-content: space-between;
+        line-height: 0.75;
+
+        p{
+            padding: 0 30px;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+        }
+    
+        span{
+            padding: 0 30px;
+            font-size: 10px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+
+            small{
+                font-weight: 600; 
+            }
+        }
+
+        div{
+            display: grid;
+            grid-auto-flow: column;
+            column-gap: 5px;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+        }
+
+
+    }
+   
+
+    
 }
+
+// .buttons_row{
+//     display: grid;
+//     grid-auto-flow: row;
+//     row-gap: 5px;
+//     align-items: center;
+//     text-align: center;
+//     justify-content: space-between;
+//     div{
+//         display: grid;
+//         grid-auto-flow: column;
+//         column-gap: 5px;
+//         align-items: center;
+//         text-align: center;
+//         justify-content: space-between;
+//     }
+// }
 
 
 .colorline {
     height: 20px;
     // width: 100%;
-    width: 200px;
+    max-width: 200px;
+    min-width: 100px;
     background: linear-gradient(to right, blue var(--color1, 0%), pink var(--color2, 100%));
     // background: linear-gradient(to right, blue 50%, pink var(--women));
   }
+
+.subcard__right{
+    display: grid;
+    align-items: center;
+    height: 100%;
+    border-radius: 15px;
+    border: 1px solid #D9D9D9;
+}
