--- a/src/widgets/header/UI/styles.module.scss
+++ b/src/widgets/header/UI/styles.module.scss
@@ -6,6 +6,7 @@
     align-items: center;
     height: 80px;
     border-bottom: 0.5px solid rgba(0, 0, 0, 0.30);
+    // max-width: var(--container-width);
 }
 
 .row{
