feat: add Platform page, Offers page (without pixel perfect)

--- a/src/features/advProjectCard/UI/styles.module.scss
+++ b/src/features/advProjectCard/UI/styles.module.scss
@@ -7,7 +7,7 @@
     border: 1px solid var(--Gradients-Gradient-1, #4772E6);
     padding-top: 20px ;
     margin-bottom: 10px;
-    max-width: 1105px;
+    // max-width: 1105px;
 
 }
 
@@ -156,11 +156,6 @@
     }
 
 }
-// .more__btn{
-//     display: grid;
-//     align-items: flex-start;
-//     margin-top: 10px;
-// }
 
 .chat__btn{
     display: grid;
