feat: add Platform Page (without pixcel perfect)

--- a/src/features/acceptProject/UI/styles.module.scss
+++ b/src/features/acceptProject/UI/styles.module.scss
@@ -10,6 +10,7 @@
     div{
         display: grid;
         grid-auto-flow: column;
+        align-items: center;
         column-gap: 10px;
         justify-content: center;
 
