--- a/src/widgets/platformInfo/UI/styles.module.scss
+++ b/src/widgets/platformInfo/UI/styles.module.scss
@@ -4,6 +4,7 @@
     border-radius: 40px;
     border: 1px solid var(--Personal-colors-grey, #BDBDBD);
     background: var(--Personal-colors-White, #FFF);
+    margin-bottom: 50px;
 }
 
 .top{
@@ -48,4 +49,25 @@
 
     row-gap: 30px;
     align-items: center; 
+}
+
+
+.complite{
+    border-radius: 40px;
+    color: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+    border: 1px solid var(--Gradient-1, #4772E6);
+    background: var(--Personal-colors-White, #FFF);
+
+    span {
+        border: 4px solid var(--Gradient-1, #4772E6);
+    }
+}
+
+
+.send{
+    display: grid;
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 220px;
 }
